init: MVVM-architecture& stored procs. for paging

--- a/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
+++ b/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
-    <Folder Include="Commands\" />
+    <ProjectReference Include="..\Generator\Generator.csproj" />
   </ItemGroup>
 
 </Project>
