--- a/Progbase3/WordGeneratorLib/WordGeneratorLib.csproj
+++ b/Progbase3/WordGeneratorLib/WordGeneratorLib.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocX" Version="1.8.0" />
+    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="19.1.0.66" />
   </ItemGroup>
 
   <ItemGroup>
