add: image generation

--- a/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
+++ b/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLibrary\EntitiesLibrary.csproj" />
+    <ProjectReference Include="..\ImageGenratorLib\ImageGenratorLib.csproj" />
     <ProjectReference Include="..\WordGeneratorLib\WordGeneratorLib.csproj" />
   </ItemGroup>
 
