add: image in word

--- a/Progbase3/WordGeneratorLib/WordGeneratorLib.csproj
+++ b/Progbase3/WordGeneratorLib/WordGeneratorLib.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLibrary\EntitiesLibrary.csproj" />
+    <ProjectReference Include="..\ImageGenratorLib\ImageGenratorLib.csproj" />
   </ItemGroup>
 
 </Project>
