--- a/Progbase3/EntitiesLibrary/EntitiesLibrary.csproj
+++ b/Progbase3/EntitiesLibrary/EntitiesLibrary.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="ScottPlot" Version="4.1.16" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataManagersLibrary\DataManagersLibrary.csproj" />
   </ItemGroup>
 
 </Project>
