--- a/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
+++ b/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EntitiesLibrary\EntitiesLibrary.csproj" />
     <ProjectReference Include="..\HashersLibrary\HashersLibrary.csproj" />
     <ProjectReference Include="..\WordGeneratorLib\WordGeneratorLib.csproj" />
