report: not tested

--- a/Progbase3/EntitiesLibrary/EntitiesLibrary.csproj
+++ b/Progbase3/EntitiesLibrary/EntitiesLibrary.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataManagersLibrary\DataManagersLibrary.csproj" />
+    <ProjectReference Include="..\NetManagers\NetManagers.csproj" />
   </ItemGroup>
 
 </Project>
