fix: general functionality of app

--- a/Progbase3/Generator/Generator.csproj
+++ b/Progbase3/Generator/Generator.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataGeneratorsLibrary\DataGeneratorsLibrary.csproj" />
+    <ProjectReference Include="..\RepositoryLibrary\RepositoryLibrary.csproj" />
   </ItemGroup>
 
 </Project>
