--- a/Progbase3/DataGeneratorsLibrary/DataGeneratorsLibrary.csproj
+++ b/Progbase3/DataGeneratorsLibrary/DataGeneratorsLibrary.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EntitiesLibrary\EntitiesLibrary.csproj" />
+    <ProjectReference Include="..\RepositoryLibrary\RepositoryLibrary.csproj" />
   </ItemGroup>
 
 </Project>
