--- a/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
+++ b/Progbase3/MoiveHubSystem/MoiveHubSystem.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="3.1.0" />
   </ItemGroup>
 
